--- a/js/package.json
+++ b/js/package.json
@@ -25,11 +25,19 @@
   },
   "devDependencies": {
     "webpack": "^3.5.5",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "css-loader": "0.28.7",
+    "style-loader": "^0.19.0",
+    "svg-loader": "0.0.2"
   },
   "dependencies": {
     "@jupyter-widgets/base": "^1.0.0",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "cytoscape": "^3.2.4",
+    "datatables": "^1.10.13",
+    "jquery": "^3.3.1",
+    "jquery-ui": "^1.12.1",
+    "igv": "0.1.1"
   },
   "jupyterlab": {
     "extension": "src/extension-jupyterlab"
